[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/Character.gd" type="Script" id=1]
[ext_resource path="res://scripts/fsm/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://scripts/fsm/State.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/objects/PushBox.gd" type="Script" id=5]
[ext_resource path="res://scripts/objects/MultiCollisionBox.gd" type="Script" id=6]
[ext_resource path="res://scripts/objects/HitBox.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Character" type="Node2D"]
script = ExtResource( 1 )

[node name="PushBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource( 5 )
shape = Rect2( -32, -32, 64, 64 )
color = Color( 1, 1, 0, 1 )

[node name="HurtBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource( 6 )
active = true
color = Color( 0, 1, 0, 1 )

[node name="HitBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource( 7 )
active = true
color = Color( 1, 0, 0, 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
init_state = "Idle"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="SpriteContainer" type="Position2D" parent="."]

[node name="Main" type="AnimatedSprite" parent="SpriteContainer"]
frames = SubResource( 1 )
